--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-test",
-  "version": "5.11.1-cardProductImprovements.12",
+  "version": "5.12.0-rc.1",
   "description": "UT test library",
   "main": "index.js",
   "scripts": {
