--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-test",
-  "version": "5.15.0-rc-cubalibre.2",
+  "version": "5.15.2",
   "description": "UT test library",
   "main": "index.js",
   "scripts": {
