--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "ut-tools": "^5.32.7"
   },
-  "peerDependencies": {
+  "dependencies": {
     "joi": "^13.1.2"
   }
 }
