--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-test",
-  "version": "6.0.0-rc-dss.0",
+  "version": "5.18.2",
   "description": "UT test library",
   "main": "index.js",
   "scripts": {
