--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "tap": "12.5.2",
+    "tap": "^12.5.2",
     "ut-tools": "^6.4.2"
   },
   "dependencies": {
