--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-node_modules
-node_modules/**/*
+.nyc_output
+.history
+.idea
+.lint
+.tern*
+.ut_*
 *.log
+coverage
+dev
+dist
+node_modules
+npm-debug.*
 package-lock.json
+yarn.lock
+.ut_*rc
