--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-test",
-  "version": "5.21.4",
+  "version": "6.0.0-gdpr.24",
   "description": "UT test library",
   "main": "index.js",
   "scripts": {
@@ -31,7 +31,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "tap": "^12.5.2",
-    "ut-tools": "^6.4.2"
+    "ut-tools": "^6.33.4"
   },
   "dependencies": {
     "joi": "13.7.0"
